# envir

./: .travis.yml  README.rst  pyproject.toml  readme.md  setup.py
.github/: ISSUE_TEMPLATE.md
tests/: __init__.py  test_envir.py
