[project]
name = "envir"
version = "0.1.0"
description = ""
authors = [
    {name = "Kilerd", email = "blove694@gmail.com"},
]
dependencies = []
requires-python = ">=3.0"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = "https://github.com/kilerd/envir"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest~=3.2",
]
